--- a/jsp_problem0915/WebContent/form_example.html
+++ b/jsp_problem0915/WebContent/form_example.html
@@ -5,8 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-
-	<form action="FormExampleTest" method="post">
+	<form action="FormExample" method="post">
 		이름 : <input type="text" name="name" size="10"><br /> 아이디 : <input
 			type="text" name="id" size="10"><br /> 비밀번호 : <input
 			type="password" name="pw" size="10"><br /> <input
